fix: cart modal overflow

--- a/src/index.css
+++ b/src/index.css
@@ -88,6 +88,8 @@
   }
   body {
     @apply h-full w-full bg-background text-foreground;
+    width: 100vw;
+    height: 100vh;
     overflow-x: hidden;
   }
 }
